--- a/app/sections/Flagship/hof/hof.scss
+++ b/app/sections/Flagship/hof/hof.scss
@@ -11,6 +11,7 @@
     padding-right: 10.7vw;
     font-size: 2.5vw;
     position: relative;
+    cursor: pointer;
     &::after{
         content: '';
         display: block;
