--- a/app/sections/EquinoxMain/equinoxMain.scss
+++ b/app/sections/EquinoxMain/equinoxMain.scss
@@ -4,7 +4,7 @@
     height: 40vw;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: center top;
     display: flex;
     justify-content: center;
     align-items: center;
